--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background-color: var(--tg-theme-bg-color);
+      background-color: var(--tg-theme-bg-color);
     }
 
     .image-container {
